--- a/cyan/src/app/wordpress-layout.css
+++ b/cyan/src/app/wordpress-layout.css
@@ -1,5 +1,39 @@
 /* ===== EXACT HOMEPAGE LAYOUT FROM WORDPRESS compiled.css ===== */
 
+/* Icon Font - from WordPress compiled.css lines 4838-5050 */
+@font-face {
+  font-family: "cyan-icon";
+  src: url("/wp-assets/fonts/icons/cyan-icon.eot");
+  src: url("/wp-assets/fonts/icons/cyan-icon.eot") format("embedded-opentype"),
+       url("/wp-assets/fonts/icons/cyan-icon.ttf") format("truetype"),
+       url("/wp-assets/fonts/icons/cyan-icon.woff") format("woff"),
+       url("/wp-assets/fonts/icons/cyan-icon.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+i {
+  font-family: "cyan-icon" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  font-size: 24px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-call:before {
+  content: "\e902";
+}
+
+.icon-search:before {
+  content: "\e92b";
+}
+
 /* Header - Exact from WordPress lines 1522-1702 */
 header {
   display: flex;
